--- a/package.json
+++ b/package.json
@@ -19,19 +19,19 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "expo": "^25.0.0",
-    "firebase": "^4.12.1",
-    "lodash": "^4.17.5",
-    "native-base": "^2.3.10",
+    "expo": "25.0.0",
+    "firebase": "4.12.1",
+    "lodash": "4.17.5",
+    "native-base": "2.3.10",
     "react": "16.2.0",
     "react-native": "0.52.0",
-    "react-native-firebase": "^3.3.1",
-    "react-navigation": "^1.5.8",
-    "react-redux": "^5.0.7",
-    "redux": "^3.7.2",
+    "react-native-firebase": "3.3.1",
+    "react-navigation": "1.5.8",
+    "react-redux": "5.0.7",
+    "redux": "3.7.2",
     "redux-persist": "4.6.0",
     "redux-saga": "0.14.6",
-    "reduxsauce": "^0.7.0",
-    "seamless-immutable": "^7.1.3"
+    "reduxsauce": "0.7.0",
+    "seamless-immutable": "7.1.3"
   }
 }
